feat: enable run-scoped artifact download
